#404 fudcon - fix img src internal path

--- a/fudcon.fedoraproject.org/data/content/LATAM/index.html
+++ b/fudcon.fedoraproject.org/data/content/LATAM/index.html
@@ -50,7 +50,7 @@
       </div>
       <!-- Start Featured Image -->
       <div class="splash_img">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/de/Vista_de_Puno_y_el_Titicaca%2C_Per%C3%BA%2C_2015-08-01%2C_DD_61.JPG/640px-Vista_de_Puno_y_el_Titicaca%2C_Per%C3%BA%2C_2015-08-01%2C_DD_61.JPG" width="630" height="259" alt="Puno City" title="Di Diego Delso, Wikipedia - Creative Commons Attribution-Share Alike 4.0" href="http://creativecommons.org/licenses/by-sa/4.0"/>
+        <img src="/static/images/puno.jpg" width="630" height="259" alt="Puno City" title="Di Diego Delso, Wikipedia - Creative Commons Attribution-Share Alike 4.0" href="http://creativecommons.org/licenses/by-sa/4.0"/>
       </div>
       <!-- End Featured Image -->
     </div>
