#404 update fudcon index and add backlink to homepage in LATAM

--- a/fudcon.fedoraproject.org/data/content/LATAM/index.html
+++ b/fudcon.fedoraproject.org/data/content/LATAM/index.html
@@ -19,7 +19,7 @@
 <div class="container">
   <div class="header_bar">
     <div class="header">
-      <div class="logo_top"><img src="${path}/static/images/logo.png" width="214" height="82" /></div>
+      <div class="logo_top"><a href="${path}/index.html" target="_blank"><img src="${path}/static/images/logo.png" width="214" height="82" /></a></div>
       <!-- Start Menu Section -->
       <ul class="top_menu">
         <li class="top_menu_element">
