--- a/fudcon.fedoraproject.org/data/content/index.html
+++ b/fudcon.fedoraproject.org/data/content/index.html
@@ -60,7 +60,7 @@
   <div class="splash_container" id="index_splash">
     <div class="splash_content">
       <div class="splash_text">
-        <h1>FUDCon 2015</h1>
+        <h1>FUDCon 2016</h1>
         <h2>FUDCon is the Fedora Users and Developers Conference, a major free software event held in various regions around the world, usually annually per region.<br />
         FUDCon is a combination of sessions, talks, workshops, and hackfests in which project participants can work on specific initiatives.<br />
         FUDCon is always free to attend for anyone.</h2>
@@ -103,10 +103,10 @@
           <p><a href="http://www.flocktofedora.org/"><strong>Learn more about Flock Rochester 2015 Here</strong></a></p>
 				</div>
         <div id="column_two">
-          <h4><a href="LATAM/">LATAM: FUDCon Córdoba 2015</a></h4>
-          <h3><a href="LATAM/"> Córdoba, Argentina - September 10 through 12, 2015</a></h3>
-					<div id="imgbox"><a href="LATAM/"><img style="padding-top:60px" src="${path}/static/images/logo_cordoba_2015.jpg" width="260px" height="170px" class="center" /></a></div>
-          <p><a href="LATAM/"><strong>Learn more about FUDCon Argentina 2015 Here</strong></a></p>
+          <h4><a href="LATAM/">LATAM: FUDCon Puno 2016</a></h4>
+          <h3><a href="LATAM/"> Puno, Perù - October 13 through 16, 2016</a></h3>
+					<div id="imgbox"><a href="LATAM/"><img style="padding-top:60px" src="${path}/static/images/logo_puno_2016.jpg" width="260px" height="170px" class="center" /></a></div>
+          <p><a href="LATAM/"><strong>Learn more about FUDCon Perù 2016 Here</strong></a></p>
 				</div>
       </div>
     </div>
