#404 update fudcon 2016 APAC

--- a/fudcon.fedoraproject.org/data/content/APAC/index.html
+++ b/fudcon.fedoraproject.org/data/content/APAC/index.html
@@ -19,7 +19,7 @@
 <div class="container">
   <div class="header_bar">
     <div class="header">
-      <div class="logo_top"><img src="${path}/static/images/logo.png" width="214" height="82" /></div>
+      <div class="logo_top"><a href="${path}/index.html" target="_blank"><img src="${path}/static/images/logo.png" width="214" height="82" /></a></div>
       <!-- Start Menu Section -->
       <ul class="top_menu">
         <li class="top_menu_element">
@@ -37,13 +37,13 @@
   <div class="splash_container" id="index_splash">
     <div class="splash_content">
       <div class="splash_text">
-        <h1>FUDCon Pune 2015</h1>
+        <h1>FUDCon Phnom Penh 2016</h1>
         <h2>FUDCon is the Fedora Users and Developers Conference, a major free software event held in various regions around the world, usually annually per region. FUDCon is a combination of sessions, talks, workshops, and hackfests. <br />
           FUDCon is always free to attend for anyone in the world.</h2>
       </div>
       <div class="splash_img">
         <!-- Start Featured Image -->
-          <img src="${path}/static/images/sinhagad.jpg" width='630' height='250' alt="Sinhagad" title="Pune 2015 FUDcon"/>
+          <img src="${path}/static/images/phnom_penh.jpg" width='630' height='250' alt="Phnom Penh" title="Phnom Penh 2016 FUDcon"/>
         <!-- End Featured Image -->
       </div>
     </div>
@@ -51,10 +51,10 @@
   <div class="central_container_mil">
     <div class="central_content" id="home">
       <div class="one_column_division">
-        <div class="column_row_img" id="column_one_pune"> </div>
-        <h4>FUDCon will be held in Pune, India</h4>
-        <h3>Pune - June 26 - June 28, 2015</h3>
-        <p><strong>FUDCon (Fedora Users and Developers Conference)</strong> is an important event in the world of free software that is held in different parts of the world, typically once a year to the region. The FUDCon is a combination of sessions, talks, workshops and hackfest in which project participants can work on specific initiatives. Topics include: infrastructure, development of features, construction and / or consolidation of the community, management and governance, marketing, testing and QA, packaging, etc..</p>
+        <div class="column_row_img" id="column_one_pp"> </div>
+        <h4>FUDCon will be held in Phnom Penh, Cambodia</h4>
+        <h3>Phnom Penh - October, 2016</h3>
+        <p><strong><a href="https://fedoraproject.org/wiki/FUDCon" title="FUDCon">FUDCon (Fedora Users and Developers Conference)</a></strong> is an important event in the world of free software that is held in different parts of the world, typically once a year to the region. The FUDCon is a combination of sessions, talks, workshops and hackfest in which project participants can work on specific initiatives. Topics include: infrastructure, development of features, construction and / or consolidation of the community, management and governance, marketing, testing and QA, packaging, etc..</p>
         <p><a href="location.html"><strong>Learn more about the locations and local facilities</strong></a></p>
       </div>
       <div class="one_column_division">
