--- a/fudcon.fedoraproject.org/data/content/APAC/location.html
+++ b/fudcon.fedoraproject.org/data/content/APAC/location.html
@@ -19,7 +19,7 @@
 <div class="container">
   <div class="header_bar">
     <div class="header">
-      <div class="logo_top"><img src="${path}/static/images/logo.png" width="214" height="82" /></div>
+      <div class="logo_top"><a href="${path}/index.html" target="_blank"><img src="${path}/static/images/logo.png" width="214" height="82" /></a></div>
       <!-- Start Menu Section -->
       <ul class="top_menu">
         <li class="top_menu_element">
@@ -40,7 +40,7 @@
   <div class="splash_container">
     <div class="splash_content">
       <div class="splash_text_section">
-        <h1>FUDCon Pune 2015</h1>
+        <h1>FUDCon Phnom Penh 2016</h1>
         <h2>FUDCon is the Fedora Users and Developers Conference, a major free software event held in various regions around the world, usually annually per region. FUDCon is a combination of sessions, talks, workshops, and hackfests. <br />FUDCon is always free to attend for anyone in the world. </h2>
       </div>
     </div>
@@ -48,67 +48,52 @@
   <div class="central_container">
     <div class="central_content">
       <div class="one_column_division">
-        <h4>Pune - June 26 - June 28, 2015</h4>
+        <h4>Phnom Penh - October, 2016</h4>
         <br />
         <h3>Location</h3>
-        <h2>Pune, India</h2>
-          <p>Pune is the eighth largest metropolis in India, the second largest in the state of Maharashtra after Mumbai, and the largest city in the Western Ghats. Pune is known for its educational facilities and relative prosperity. Pune is the cultural capital of Maharashtra. The city is known for various cultural activities like classical music, spirituality, theater, sports, and literature. These activities and job opportunities attract migrants and students from all over India and abroad, which makes for a city of many communities and cultures.</p>
-
-          <p>Pune is said to be the cultural capital of the state of Maharashtra. It epitomises the Marathi culture, which lays emphasis on education, arts and crafts, music, and theatre. Pune has emerged as a centre of modern architecture in India, with prize winning buildings. Pune culture reflects a blend of traditions with modernity, as along with hosting classical shows.</p>
-
-          <p>The large student population in the city makes for a lively nightlife and vibrant atmosphere. Pune also houses fantastic restaurants, good museums and is well known for its surrounding hill forts which offer panoramic bird's-eye views.</p>
-
+        <h2>Phnom Penh, Cambodia</h2>
+          <p>Phnom Penh, at the confluence of the Mekong and the Tonle Sap Rivers, is the capital of Cambodia and its largest city. The beauty that made it a 'Paris of the East' before 1970 is unfortunately well hidden, though there are a few French colonial buildings remaining. The wide boulevards and promenades envisaged by the French have become parking spaces and market stalls: pedestrians are not in favour. The most pleasant strolling is to be done along the park-like river frontage, which hosts cafés and restaurants aplenty. Phnom Penh is on its best ways to become again the Pearl of South East Asia.</p>
         <div class="one_column_division" id="venue">
         <!-- <div class="column_row_img" id="venue_img"> </div> -->
           <h5>Venue</h5>
-          <h6>MIT College of Engineering</h6>
-            <p>MITCOE is among the top engineering colleges in India and in Pune. They have state of the art facilities, with a large well-equipped auditorium for the main track along with classrooms for parallel tracks. Most importantly though, the college faculty and students have active open source evangelists.</p>
+          <h6><a href="http://www.itc.edu.kh/"> Institute of Technology of Cambodia</a></h6>
+            <p><a href="https://goo.gl/maps/hf0td">Russian Conf. Blvd,Phnom Penh, Cambodia.</a><br />BarCamp Phnom Penh has on saturday morning their opening remark (08:30-09:30) in the largest room (2.500), we are invited to join this opening ceremony. We will have a big hall (400 people) for our keynote in the afternoon. We will use this hall as our own dedicated room for our sessions. All rooms are equipped with projectors and wifi is available on the whole ground of ITC. </p>
         </div>
         <p>
         <h2>Useful info:</h2>
         <ul>
-          <li>Official currency: Indian Rupee (INR)</li>
-          <li>Time zone: IST (UTC/GMT +5:30 hour)</li>
-          <li>Electrical ratings: 230V, 50Hz AC, Plug type: C, D, M. However, many power outlets are universal and may accept a number of plugs without an adaptor.</li>
+          <li>Cambodia uses three kind of currency, the Riel its own currency, which is mainly used to pay smaller sums (under 1 US$), the US$ which is mainly used (1 US$ = 4.000~4.500 Riel) and also in the nothern part the Bath from Thailand is used. Credit cards are not widely used, mainly in the good hotels and restaurant but you can use them in banks to get cash in advance for a small fee. ATM from ANZ and Canadia bank are widely spreaded and pay out in US$. Fee for withdraw with credit card is between 3-4$ </li>
+          <li>Time zone: GMT/UTC + 07:00 hour</li>
+          <li>Voltage: 230 V; Plugs A and C* (Sa lot of outlets are a combination of type A and C and can accept either type plug. Plug G may be found in some hotels.) You will need a voltage converter, and plug adapter in order to use U.S. appliances. We recommend getting a universal adapter and converter kit. </li>
         </ul>
         </p>
       </div>
 
       <div class="one_column_division">
-        <h3>Getting to Pune</h3>
-        <h2>Indian Visa application</h2>
-          <p>You can get a Tourist, Business or Conference Visa to attend the FUDCon. An Indian visa is valid from the day it is issued, not from the day you arrive in the country.</p>
+        <h3>Getting to Phnom Penh</h3>
+        <h2>Cambodian Visa application</h2>
+          <p>All visitors, except citizens of Indonesia, Malaysia, Singapore, Philippines, Laos, Thailand and Vietnam need a visa to enter Cambodia. Visas can be obtained at Cambodian embassies or consulates. Visas are also available "on arrival" at both international airports, all six international border crossings with Thailand, some international border crossings with Vietnam, and at the main border crossing with Laos. </p>
 
-          <p>The Electronic Travel Authorisation(ETA) facility became operational recently for citizens of over 43 eligible countries[5], including those who are eligible for visa on arrival.</p>
+          <p>You will need a visa type T, which will cost 30 US$. Visa are also available as so called e-visa - <a href="https://www.evisa.gov.kh/">https://www.evisa.gov.kh/</a> which you can get via internet in advance.</p>
 
-          <p>Visa fee depends on the country of origin and nationality of the person applying for the visa. It ranges between 20 - 100 USD.</p>
+          <p>Only citizens of the following countries have to apply for a visa in advance: Afghanistan, Algeria, Arab Saudi, Bangladesh, Iran, Iraq, Pakistan, Sri Lanka, Sudan, Nigeria.</p>
 
-          <p>For further information on this, please check with local embassy office or Indian Visa Application center office or websites for information on applicable fee and payment methods.</p>
-
-          <ul>
-            <li><a href="https://indianvisaonline.gov.in/visa/">https://indianvisaonline.gov.in/visa/</a></li>
-            <li><a href="http://mea.gov.in/indian-missions-abroad.htm">http://mea.gov.in/indian-missions-abroad.htm</a></li>
-            <li><a href="https://indianvisaonline.gov.in/visa/tvoa.html">https://indianvisaonline.gov.in/visa/tvoa.html</a></li>
-            <li><a href="https://india.visahq.com/?_escaped_fragment_=india-Tourist-visa">https://india.visahq.com/?_escaped_fragment_=india-Tourist-visa</a></li>
-            <li><a href="http://en.wikipedia.org/wiki/Visa_policy_of_India">http://en.wikipedia.org/wiki/Visa_policy_of_India</a></li>
-          </ul>
+          <p>for more information consult the pages of the <a href="http://www.tourismcambodia.com/tripplanner/essential-information/visa-passport.htm"> Cambodian Tourism Ministery</a></p>
       </div>
 
       <div class="one_column_division">
         <h3>Getting around</h3>
         <h2>Eat</h2>
-          <p>Pune boasts of a wide range of cuisines ranging from international food (like Italian, Chinese, South-east Asian) to various local dishes. Don't miss the famous misal-pav, vada-pav, puranpoli and a variety of other dishes while you are here! Pune caters to food suitable for all palates.</p>
-
-          <p>There are various restaurants and eateries near the conference venue as well as accomodation, which are hygenic, tasty and economical.</p>
+          <p>Phnom Penh offers some interesting culinary treats not found elsewhere in the country. These include French-influenced dining and Thai, Vietnamese, and Indonesian dishes. Khmer street restaurant are also found throughout the city, where a typical meal costs 2-4 Dollars. Pizzas, banana pancakes and fried rice are always easy to find. The riverfront hosts everything from stand-up stalls to fine French bistros. If you have time try an tradional khmer BBQ, its available for around 5 US$ all-you-can-eat.</p>
       </div>
+
       <div class="one_column_division">
         <h3>Weather</h3>
-          <ul>
-            <li>Summers begin March to July. Though not as hot as Northern parts of India, the daytimes are very sunny with dry heat.</li>
-            <li>Early mornings are pleasant and evenings after six, cool and breezy.</li>
-            <li>Temperature: 23*c(min) to 35*c(max) [Approximate values]</li>
-            <li>Rainfall: Expected (Monsoon starts end of June/Start of July)</li>
-          </ul>
+          <p>Phnom Penh has a tropical wet and dry climate. The climate is hot year-round with only minor variations. Temperatures typically range from 22 to 35 °C (72 to 95 °F) and weather is subject to the tropical monsoons. The southwest monsoon blows inland bringing moisture-laden winds from the Gulf of Thailand and Indian Ocean from May to October. The northeast monsoon ushers in the dry season, which lasts from November to March. The city experiences the heaviest precipitation from September to October with the driest period in January and February.</p>
+          <p>The city has two distinct seasons. The rainy season, which runs from May to October, sees high temperatures accompanied by high humidity. The dry season lasts from November to April when temperatures can drop to 22 °C (72 °F). But temperatures can approach 40 °C (104 °F) in April. The best months to visit the city are November to February when temperatures, humidity and rainfall are lower.</p>
+      </div>
+      <div class="one_column_division">
+        <h3><a href="https://fedoraproject.org/wiki/FUDCon:Bid_for_PhnomPenh_2016">More Info</a></h3>
       </div>
     </div>
 
