--- a/fudcon.fedoraproject.org/data/content/index.html
+++ b/fudcon.fedoraproject.org/data/content/index.html
@@ -97,10 +97,10 @@
     <div class="central_content" id="home">
       <div class="one_column_division">
         <div id="column_one">
-          <h4><a href="http://www.flocktofedora.org/">NA: Flock Rochester 2015</a></h4>
-          <h3 class="heading-title"><a href="http://www.flocktofedora.org/"> Rochester, NY - August 12 through 15, 2015</a></h3>
-				  <div id="imgbox"><a href="http://www.flocktofedora.org/"><img style="padding-top:60px" src="${path}/static/images/flockrochester_logo.png" width="495px" height="140px" class="center" /></a></div>
-          <p><a href="http://www.flocktofedora.org/"><strong>Learn more about Flock Rochester 2015 Here</strong></a></p>
+          <h4><a href="APAC/">APAC: FUDCon Phnom Penh 2016</a></h4>
+          <h3><a href="APAC"> Phnom Penh, Cambodia - October, 2016</a></h3>
+				  <div id="imgbox"><a href="APAC/"><img style="padding-top:60px" src="${path}/static/images/logo_phnompenh_2016.png" width="260px" height="170px" class="center" /></a></div>
+          <p><a href="APAC/"><strong>Learn more about FUDCon Cambodia 2016 Here</strong></a></p>
 				</div>
         <div id="column_two">
           <h4><a href="LATAM/">LATAM: FUDCon Puno 2016</a></h4>
