--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -8,91 +8,162 @@
     <title>${_('Flock To Fedora: Fedora Contributor Conference')}</title>
   </head>
 
-  <body class="home">
+  <body class="home" data-spy="scroll" data-target="#flocknav">
     <xi:include href="../templates/head.html" />
-
-    <div id="head" class="main-head flock-groupimg">
+    <div id="welcome" class="jumbotron flock-groupimg text-center">
   	  <div class="container">
-        <div class="flock-groupimg-content">
-          <h1>Flock to Fedora</h1>
-          <h2>${_('An annual conference for Fedora Contributors.')}</h2>
-        </div>
-
-  	    <div class="row top-space high">
-
-  	  	  <div class="col-xs-12 col-sm-4">
-            <div class="panel panel-default">
-              <div class="panel-heading">
-                <h3 class="panel-title"><i class="fa fa-question-circle"></i> ${_('What is Flock?')}</h3>
-              </div>
-              <div class="panel-body">
-                ${_('Flock, now in its fourth year, is a conference for Fedora contributors to come together, discuss new ideas, work to make those ideas a reality, and continue to promote the core values of the Fedora community: Freedom, Friends, Features, and First.')} <a href="/about">${_('Read more...')}</a>
-              </div>
-            </div>
-  	  	  </div>
-
-  	  	<div class="col-xs-12 col-sm-4">
-          <div class="panel panel-default">
-            <div class="panel-heading">
-              <h3 class="panel-title"><i class="fa fa-users"></i> ${_('Want to attend?')}</h3>
-            </div>
-            <div class="panel-body">
-              ${_('Attendance at Flock is free and open to all. Registration has closed but you are still welcome to come. However, we cannot guarantee lunch, swag, or admission to evening activities for unregistered attendees. Our goal is to provide for all, but we base our numbers on the pre-registered attendee counts. If you have already registered, you can view your information on the registration page.')} <a href="https://register.flocktofedora.org">${_('Visit the registration page now.')}</a>
-            </div>
+        <div class="row">
+          <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
+          <img src="${path}/static/images/index/coverimage.png" width="100%"/>
           </div>
-  	  	</div>
-
-  	  	  <div class="col-xs-12 col-sm-4">
-            <div class="panel panel-default">
-              <div class="panel-heading">
-                <h3 class="panel-title"><i class="fa fa-map-marker"></i> ${_('When and where is Flock?')}</h3>
-              </div>
-              <div class="panel-body">
-                ${_('Flock will be held August 2-5, 2016 in Krakow, Poland. Our Location page has more information about lodging reservations and the Krakow vicinity.')} <a href="/location">${_('Read more...')}</a>
-              </div>
-            </div>
-  	  	  </div>
-  	    </div>
+          <div class="col-xs-12 col-md-8 col-md-offset-2">
+            <h2>Welcome to Flock 2016</h2>
+            <p>
+              Welcome to Flock 2016 in Krakow! Now in its fourth year, Flock is a fun and productive
+              event which brings the Fedora community together to discuss new ideas — and to put
+              those ideas into practice in hackfests and workshops.
+            </p>
+          </div>
+        </div>
   	  </div>
     </div>
 
-    <div class="container">
-  	  <div class="row top-space high">
-
-  	  	<div class="col-xs-12 col-sm-4">
-          <div class="panel panel-default">
-            <div class="panel-heading">
-              <h3 class="panel-title"><i class="fa fa-calendar"></i> ${_('Schedule')}</h3>
-            </div>
-            <div class="panel-body">
-              ${_('The schedule for Flock 2016 is now available.')} <a href="https://flock2016.sched.org/">${_('Visit the schedule now.')}</a>
-            </div>
-          </div>
-  	  	</div>
-
-  	  	  <div class="col-xs-12 col-sm-4">
-            <div class="panel panel-default">
-              <div class="panel-heading">
-                <h3 class="panel-title"><i class="fa fa-clock-o"></i> ${_('Call for submissions')}</h3>
-              </div>
-              <div class="panel-body">
-		${_('The call for submissions for Flock presentation and workshop talks has ended.')}
-              </div>
-            </div>
-  	  	  </div>
-
-  	  	<div class="col-xs-12 col-sm-4">
-          <div class="panel panel-default">
-            <div class="panel-heading">
-              <h3 class="panel-title"><i class="fa fa-smile-o"></i> ${_('Care to sponsor Flock?')}</h3>
-            </div>
-            <div class="panel-body">
-              ${_('Are you interested in sponsoring the work of a community of free and open source software contributors? Let\'s talk! Information on sponsorships at a variety of levels will be available shortly at this site.')} <a href="/sponsorship">${_('Read more...')}</a>
-            </div>
-          </div>
-  	  	</div>
-
+    <div id="schedule" class="non-jumbo text-center">
+      <div class="container">
+      <div class="row">
+        <div class="col-xs-12 col-md-8 col-md-offset-2">
+          <div class="large-icon"><i class="fa fa-calendar"></i></div>
+          <h2>Schedule</h2>
+          <p>
+            The entire schedule for Flock 2016 is available on <a href="https://flock2016.sched.org/">sched.org</a>.
+          </p>
+          <p>
+            Flock 2016 features two keynote presentations. The first is the State of Fedora 2016 Keynote
+	    on Tuesday morning by <a href="https://mattdm.org/">Matthew Miller</a>, the Fedora Project Leader.
+            On Wednesday, the second keynote will be presented by Radosław Krowiak, the co-owner of
+	    <a href="http://www.akademiaprogramowania.pl/">Akademia Programowania</a>.
+          </p>
+        </div>
       </div>
+    </div>
+    </div>
+
+    <div id="comms" class="non-jumbo blue text-center">
+      <div class="container">
+      <div class="row">
+        <div class="col-xs-12 col-md-8 col-md-offset-2">
+          <div class="large-icon"><i class="fa fa-comments-o"></i></div>
+          <h2>Communicate with other Flock attendees</h2>
+          <br/>
+          <h3>IRC</h3>
+          <p>
+            Our main IRC channel for the event is <strong>#fedora-flock</strong>. If you are taking notes for a
+            session, please report the session name and channel to that channel. If you are using
+            Gobby or Etherpad, note that in the main channel as well. Each session room also has
+            a dedicated channel, noted on the room plan on page 8 of the booklet.
+          </p>
+          <hr/>
+          <h3>Telegram</h3>
+          <p>
+            There is a Telegram group for Flock for general Flock discussion and communication.
+            You can add it at: <a href="http://bit.ly/flock2016tg">http://bit.ly/flock2016tg</a>
+          </p>
+        </div>
+      </div>
+    </div>
+    </div>
+    <div id="transport" class="non-jumbo text-center">
+      <div class="container">
+      <div class="row">
+        <div class="col-xs-12 col-md-8 col-md-offset-2">
+          <div class="large-icon"><i class="fa fa-bus"></i></div>
+          <h2>Transportation around Krakow</h2><b4/>
+          <p>
+For the latest travel information, refer to <a href="https://fedoraproject.org/wiki/Flock2016-Krakow-proposal#Getting_There">this Fedora Project wiki page</a>.
+          </p>
+        </div>
+      </div>
+    </div>
+    </div>
+
+
+    <div id="venue" class="non-jumbo blue text-center">
+      <div class="container">
+      <div class="row">
+        <div class="col-xs-12 col-md-8 col-md-offset-2">
+          <div class="large-icon"><i class="fa fa-building"></i></div>
+          <h2>Venue and Hotel</h2>
+          <p>
+            BEST WESTERN PREMIER KRAKOW HOTEL<br/>
+ul. Opolska 14a, 31-323 Kraków, Poland <br/>
+telephone: +48 12 376 37 00 or +48 801 08 02 60 <br/>
+GPS: 50.090900, 19.914500 | N 50°05'27.2" E 19°54'52.2"
+          </p>
+        </div>
+      </div>
+    </div>
+    </div>
+
+    <div id="events" class="non-jumbo text-center">
+      <div class="container">
+      <div class="row">
+        <div class="col-xs-12 col-md-8 col-md-offset-2">
+          <div class="large-icon"><i class="fa fa-moon-o"></i></div>
+          <h2>Evening Events</h2><br/>
+          <h4><strong>Walking Tour &amp; Flock Game Night </strong> &mdash; Tuesday August 2</h4>
+          <p>
+            Krakow, a historically significant city in Poland, is on display tonight.
+            Join us for a roughly 90-minute walking tour of the old city center and
+            learn about our host city. The tour will begin with a bus from the
+            hotel. <strong>The bus will depart at approximately 6:50 pm.</strong> The tour will
+            end with either a bus back to the hotel or advice on nightlife options.
+            If you wish to take your own transportation, the tour will depart from
+            Matejki Square at 7:30 pm and end on Wawel Hill at about 9 pm.
+          </p>
+          <p>
+            Additionally, board games and a retro gaming zone will be available
+            for general socializing and fun in the hotel starting at 7:30 pm. The board
+            games will take place in the Rembrandt and Monet rooms. The retro
+            gaming zone will be set up in the Malczewski room.
+          </p>
+          <hr/>
+          <h4><strong>Cruise Krakow</strong> &mdash; Wednesday August 3</h4>
+          <p>
+            Join us for a dinner and optional cruise on the beautiful Vistula River.
+            A fantastic buffet dinner and drinks will be available for all to enjoy.
+            There will be two cruise options during the dinner. Details on these
+            thirty minute cruises will be provided at the dinner. Dinner starts at
+            7:30 pm. <strong>Buses will depart the hotel at approximately 6:30 pm
+            and 7:20 pm.</strong> Buses will begin returning to the hotel at about 9:40
+            pm. The specific pier being used for the cruise will be announced on
+            Wednesday morning.
+          </p>
+          <hr/>
+          <h4><strong>Brewery Lubicz</strong> &mdash; Thursday August 4</h4>
+          <p>
+            A feast and beer tasting awaits us at Browar Lubicz, a recently-
+            restored brewery. The brewery dates from 1840 and has been
+            brewing beer almost continuously, even during nationalization in the
+            1950s. Restored in September 2015, the brewery is a high point of a
+            trip to Krakow. There will be non-beer options available. Dinner
+            starts at 7:30 pm. <strong>Buses will depart the hotel at approximately
+            6:30 pm and 7:20 pm.</strong> Buses will begin returning to the hotel at
+            about 9:40 pm. Don't forget to look for QR codes at the brewery to
+            get a special Fedora badge for attending this event.
+            </p>
+            <p>
+            If you wish to take your own transportation, dinner is located at:
+            Restauracja Browar Lubicz, ul. Lubicz 17 J, 31-503 Kraków
+          </p>
+
+
+
+
+
+
+        </div>
+      </div>
+    </div>
     </div>
 
   </body>
