Update registration information on main page.

--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -37,7 +37,7 @@
               <h3 class="panel-title"><i class="fa fa-users"></i> ${_('Want to attend?')}</h3>
             </div>
             <div class="panel-body">
-              ${_('Registration is now open, and attendance is free and open to all.')} <a href="https://register.flocktofedora.org">${_('Visit the registration page now.')}</a>
+              ${_('Attendance at Flock is free and open to all. Registration has closed but you are still welcome to come. However, we cannot guarantee lunch, swag, or admission to evening activities for unregistered attendees. Our goal is to provide for all, but we base our numbers on the pre-registered attendee counts. If you have already registered, you can view your information on the registration page.')} <a href="https://register.flocktofedora.org">${_('Visit the registration page now.')}</a>
             </div>
           </div>
   	  	</div>
