flocktofedora: Add bronze sponsors StickerMule and UnixStickers

--- a/flocktofedora.org/data/content/sponsorship/index.html
+++ b/flocktofedora.org/data/content/sponsorship/index.html
@@ -105,6 +105,12 @@
 		<div class="col-xs-12 col-sm-2">
 		  <img src="../../../static/images/LF_logo_NEW_Pantone.png"/>
 		</div>
+		<div class="col-xs-12 col-sm-2">
+		  <img src="../../../static/images/sticker-mule.png"/>
+		</div>
+		<div class="col-xs-12 col-sm-2">
+		  <img src="../../../static/images/unixstickers.png"/>
+		</div>
 	      </div>
 	    </div>
 	  </div>
