flocktofedora: Link sponsors to their respective websites

--- a/flocktofedora.org/data/content/sponsorship/index.html
+++ b/flocktofedora.org/data/content/sponsorship/index.html
@@ -52,7 +52,7 @@
 	    <div class="panel-body">
 	      <div class="row">
 		<div class="col-xs-12 col-sm-2">
-		  <img src="../../../static/images/sponsors/redhat.png"/>
+		  <a href="https://redhat.com"><img src="../../../static/images/sponsors/redhat.png"/></a>
 		</div>
 	      </div>
 	    </div>
@@ -69,7 +69,7 @@
 	    <div class="panel-body">
 	      <div class="row">
 		<div class="col-xs-12 col-sm-2">
-		  <img src="../../../static/images/opensuse.png"/>
+		  <a href="http://opensuse.org"><img src="../../../static/images/opensuse.png"/></a>
 		</div>
 	      </div>
 	    </div>
@@ -103,13 +103,13 @@
 	    <div class="panel-body">
 	      <div class="row">
 		<div class="col-xs-12 col-sm-2">
-		  <img src="../../../static/images/LF_logo_NEW_Pantone.png"/>
+		  <a href="https://linuxfoundation.org"><img src="../../../static/images/LF_logo_NEW_Pantone.png"/></a>
 		</div>
 		<div class="col-xs-12 col-sm-2">
-		  <img src="../../../static/images/sticker-mule.png"/>
+		  <a href="https://www.stickermule.com"><img src="../../../static/images/sticker-mule.png"/></a>
 		</div>
 		<div class="col-xs-12 col-sm-2">
-		  <img src="../../../static/images/unixstickers.png"/>
+		  <a href="https://www.unixstickers.com"><img src="../../../static/images/unixstickers.png"/></a>
 		</div>
 	      </div>
 	    </div>
