flocktofedora: Add sponsors area

--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -153,12 +153,40 @@ GPS: 50.090900, 19.914500 | N 50°05'27.2" E 19°54'52.2"
             Restauracja Browar Lubicz, ul. Lubicz 17 J, 31-503 Kraków
           </p>
 
-
-
-
-
-
         </div>
+      </div>
+    </div>
+    </div>
+
+    <div id="sponsors" class="non-jumbo text-center">
+      <div class="container">
+      <div class="row">
+        <div class="col-xs-12 col-md-8 col-md-offset-2">
+          <div class="large-icon"><i class="fa fa-credit-card"></i></div>
+          <h2>Sponsors</h2>
+          <p>
+	    The Flock 2016 conference organizers thank the following for
+	    their support of this event.
+	  </p>
+	  <br/>
+	  <h3>Platinum Level</h3>
+	  <p>
+	    <a href="https://www.redhat.com"><img src="../../static/images/sponsors/redhat.png"/></a>
+	  </p>
+	  <br/>
+	  <h3>Gold Level</h3>
+	  <p>
+	    <a href="https://www.opensuse.org"><img src="../../static/images/opensuse.png"
+	    width="265" height="134"/></a>
+	  </p>
+	  <br/>
+	  <h3>Bronze Level</h3>
+	  <p>
+	    <a href="https://www.linuxfoundation.org"><img src="../../static/images/LF_logo_NEW_Pantone.png" width="227" height="75"/></a>	    
+	    <a href="https://www.stickermule.com"><img src="../../static/images/sticker-mule.png" width="250" height="75"/></a>	
+	    <a href="https://www.unixstickers.com"><img src="../../static/images/unixstickers.png" width="287" height="75"/></a>
+	  </p>
+	</div>
       </div>
     </div>
     </div>
