flocktofedora: fix alternating blue

--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -28,7 +28,7 @@
   	  </div>
     </div>
 
-    <div id="schedule" class="non-jumbo text-center">
+    <div id="schedule" class="non-jumbo blue text-center">
       <div class="container">
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
@@ -48,7 +48,7 @@
     </div>
     </div>
 
-    <div id="comms" class="non-jumbo blue text-center">
+    <div id="comms" class="non-jumbo text-center">
       <div class="container">
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
@@ -72,7 +72,8 @@
       </div>
     </div>
     </div>
-    <div id="transport" class="non-jumbo text-center">
+
+    <div id="transport" class="non-jumbo blue text-center">
       <div class="container">
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
@@ -87,7 +88,7 @@ For the latest travel information, refer to <a href="https://fedoraproject.org/w
     </div>
 
 
-    <div id="venue" class="non-jumbo blue text-center">
+    <div id="venue" class="non-jumbo text-center">
       <div class="container">
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
@@ -104,7 +105,7 @@ GPS: 50.090900, 19.914500 | N 50°05'27.2" E 19°54'52.2"
     </div>
     </div>
 
-    <div id="events" class="non-jumbo text-center">
+    <div id="events" class="non-jumbo blue text-center">
       <div class="container">
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
@@ -185,8 +186,8 @@ GPS: 50.090900, 19.914500 | N 50°05'27.2" E 19°54'52.2"
 	  <br/>
 	  <h3>Bronze Level</h3>
 	  <p>
-	    <a href="https://www.linuxfoundation.org"><img src="../../static/images/LF_logo_NEW_Pantone.png" width="227" height="75"/></a>	    
-	    <a href="https://www.stickermule.com"><img src="../../static/images/sticker-mule.png" width="250" height="75"/></a>	
+	    <a href="https://www.linuxfoundation.org"><img src="../../static/images/LF_logo_NEW_Pantone.png" width="227" height="75"/></a>
+	    <a href="https://www.stickermule.com"><img src="../../static/images/sticker-mule.png" width="250" height="75"/></a>
 	    <a href="https://www.unixstickers.com"><img src="../../static/images/unixstickers.png" width="287" height="75"/></a>
 	  </p>
 	</div>
