flocktofedora: added bit about the mailing list

--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -55,6 +55,14 @@
           <div class="large-icon"><i class="fa fa-comments-o"></i></div>
           <h2>Communicate with other Flock attendees</h2>
           <br/>
+          <h3>Mailing List</h3>
+          <p>
+            The <a href="https://lists.fedoraproject.org/archives/list/flock-attendees-2016@lists.fedoraproject.org/">
+            Flock attendees 2016 mailing list</a> is the primary means of communication
+            for attendees of Flock. If you pre-registered for Flock, you should
+            already be subscribed to this list.
+          </p>
+          <hr/>
           <h3>IRC</h3>
           <p>
             Our main IRC channel for the event is <strong>#fedora-flock</strong>. If you are taking notes for a
