--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -163,7 +163,7 @@ GPS: 50.090900, 19.914500 | N 50°05'27.2" E 19°54'52.2"
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
           <div class="large-icon"><i class="fa fa-credit-card"></i></div>
-          <h2>Sponsors</h2>
+          <h2>Sponsors</h2><br/>
           <p>
 	    The Flock 2016 conference organizers thank the following for
 	    their support of this event.
