Add transportation link for now

--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -78,7 +78,10 @@
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
           <div class="large-icon"><i class="fa fa-bus"></i></div>
-          <h2>Transportation around Krakow</h2>
+          <h2>Transportation around Krakow</h2><b4/>
+	  <p>
+	    For the latest travel information, refer to <a href="https://fedoraproject.org/wiki/Flock2016-Krakow-proposal#Getting_There">this Fedora Project wiki page</a>.
+	  </p>
         </div>
       </div>
       </div>
