flocktofedora: added a bit in the welcome about flock attendance

--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -10,18 +10,27 @@
 
   <body class="home" data-spy="scroll" data-target="#flocknav">
     <xi:include href="../templates/head.html" />
-    <div id="welcome" class="jumbotron flock-groupimg text-center">
+    <div id="welcome" class="non-jumbo flock-groupimg text-center">
   	  <div class="container">
         <div class="row">
-          <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
-          <img src="${path}/static/images/index/coverimage.png" width="100%"/>
-          </div>
           <div class="col-xs-12 col-md-8 col-md-offset-2">
-            <h2>Welcome to Flock 2016</h2>
             <p>
               Welcome to Flock 2016 in Krakow! Now in its fourth year, Flock is a fun and productive
               event which brings the Fedora community together to discuss new ideas — and to put
               those ideas into practice in hackfests and workshops.
+            </p>
+            <br/>
+          </div>
+          <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
+          <img src="${path}/static/images/index/coverimage.png" width="100%"/>
+          </div>
+          <div class="col-xs-12 col-md-8 col-md-offset-2">
+            <br/>
+            <p>
+              <small><strong>Attendance at Flock is free and open to all.</strong> Pre-registration is closed but
+              anyone is still welcome to attend. However, unregistered attendees may miss out on swag
+              or the evening events as these are booked based on pre-registration. If you did pre-register, can view
+              your information on the <a href="https://register.flocktofedora.org/">registration page.</a></small>
             </p>
           </div>
         </div>
