--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -14,6 +14,11 @@
   	  <div class="container">
         <div class="row">
           <div class="col-xs-12 col-md-8 col-md-offset-2">
+            <div class="alert alert-info" role="alert">
+              <strong>Flock Travel Advisory:</strong> due to World Youth Day festivities in Krakow, Poland will
+              <a href="http://www.pope2016.com/en/wyd-2016/security/news,458023,poland-to-restore-border-controls-july-2-31.html">impose border controls at all of its national borders from
+              July 4 to August 2.</a>
+            </div>
             <p>
               Welcome to Flock 2016 in Krakow! Now in its fourth year, Flock is a fun and productive
               event which brings the Fedora community together to discuss new ideas — and to put
