added new alert about not being livestreamed, and added room channels to IRC section

--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -15,9 +15,9 @@
         <div class="row">
           <div class="col-xs-12 col-md-8 col-md-offset-2">
             <div class="alert alert-info" role="alert">
-              <strong>Flock Travel Advisory:</strong> due to World Youth Day festivities in Krakow, Poland will
-              <a href="http://www.pope2016.com/en/wyd-2016/security/news,458023,poland-to-restore-border-controls-july-2-31.html">impose border controls at all of its national borders from
-              July 4 to August 2.</a>
+              <strong>Talks at Flock are not being livestreamed</strong> due to bandwidth constraints.
+              All talks are being recorded, and will uploaded soon. However, <strong>some talks are being transcribed live in IRC</strong>,
+              check the <a href="#comms">IRC info below</a> for more information on the channels for a specific room
             </div>
             <p>
               Welcome to Flock 2016 in Krakow! Now in its fourth year, Flock is a fun and productive
@@ -82,7 +82,8 @@
             Our main IRC channel for the event is <strong>#fedora-flock</strong>. If you are taking notes for a
             session, please report the session name and channel to that channel. If you are using
             Gobby or Etherpad, note that in the main channel as well. Each session room also has
-            a dedicated channel, noted on the room plan on page 8 of the booklet.
+            a dedicated channel in IRC, and some sessions are being transcribed there. The room IRC channels are:
+            #fedora-flock-malczewski #fedora-flock-chelmonski #fedora-flock-matejko #fedora-flock-canaletto #fedora-flock-picasso #fedora-flock-openqa #fedora-flock-monet
           </p>
           <hr/>
           <h3>Telegram</h3>
