added a photos section, and some photos from day 1

--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -217,5 +217,33 @@ GPS: 50.090900, 19.914500 | N 50°05'27.2" E 19°54'52.2"
     </div>
     </div>
 
+    <div id="photos" class="non-jumbo blue text-center">
+      <div class="container">
+      <div class="row">
+        <div class="col-xs-12 col-md-8 col-md-offset-2">
+          <div class="large-icon"><i class="fa fa-image"></i></div>
+          <h2>Day 1 Photos</h2><br/>
+          <!--  IMG_9187.JPG-THUMB.JPG  IMG_9192.JPG-THUMB.JPG  IMG_9204.JPG-THUMB.JPG  IMG_9214.JPG-THUMB.JPG
+IMG_9177.JPG-THUMB.JPG  IMG_9181.JPG-THUMB.JPG  IMG_9186.JPG-THUMB.JPG  IMG_9191.JPG-THUMB.JPG  IMG_9195.JPG-THUMB.JPG  IMG_9206.JPG-THUMB.JPG
+          -->
+          <a href="https://ryanlerch.fedorapeople.org/flockphotos/IMG_9176.JPG"><img width="100px" src="https://ryanlerch.fedorapeople.org/flockphotos/IMG_9176.JPG-THUMB.JPG"/></a>
+          <a href="https://ryanlerch.fedorapeople.org/flockphotos/IMG_9178.JPG"><img width="100px" src="https://ryanlerch.fedorapeople.org/flockphotos/IMG_9178.JPG-THUMB.JPG"/></a>
+          <a href="https://ryanlerch.fedorapeople.org/flockphotos/IMG_9183.JPG"><img width="100px" src="https://ryanlerch.fedorapeople.org/flockphotos/IMG_9183.JPG-THUMB.JPG"/></a>
+          <a href="https://ryanlerch.fedorapeople.org/flockphotos/IMG_9187.JPG"><img width="100px" src="https://ryanlerch.fedorapeople.org/flockphotos/IMG_9187.JPG-THUMB.JPG"/></a>
+          <a href="https://ryanlerch.fedorapeople.org/flockphotos/IMG_9192.JPG"><img width="100px" src="https://ryanlerch.fedorapeople.org/flockphotos/IMG_9192.JPG-THUMB.JPG"/></a>
+          <a href="https://ryanlerch.fedorapeople.org/flockphotos/IMG_9204.JPG"><img width="100px" src="https://ryanlerch.fedorapeople.org/flockphotos/IMG_9204.JPG-THUMB.JPG"/></a>
+          <a href="https://ryanlerch.fedorapeople.org/flockphotos/IMG_9214.JPG"><img width="100px" src="https://ryanlerch.fedorapeople.org/flockphotos/IMG_9214.JPG-THUMB.JPG"/></a>
+          <a href="https://ryanlerch.fedorapeople.org/flockphotos/IMG_9177.JPG"><img width="100px" src="https://ryanlerch.fedorapeople.org/flockphotos/IMG_9177.JPG-THUMB.JPG"/></a>
+          <a href="https://ryanlerch.fedorapeople.org/flockphotos/IMG_9181.JPG"><img width="100px" src="https://ryanlerch.fedorapeople.org/flockphotos/IMG_9181.JPG-THUMB.JPG"/></a>
+          <a href="https://ryanlerch.fedorapeople.org/flockphotos/IMG_9186.JPG"><img width="100px" src="https://ryanlerch.fedorapeople.org/flockphotos/IMG_9186.JPG-THUMB.JPG"/></a>
+          <a href="https://ryanlerch.fedorapeople.org/flockphotos/IMG_9191.JPG"><img width="100px" src="https://ryanlerch.fedorapeople.org/flockphotos/IMG_9191.JPG-THUMB.JPG"/></a>
+          <a href="https://ryanlerch.fedorapeople.org/flockphotos/IMG_9195.JPG"><img width="100px" src="https://ryanlerch.fedorapeople.org/flockphotos/IMG_9195.JPG-THUMB.JPG"/></a>
+          <a href="https://ryanlerch.fedorapeople.org/flockphotos/IMG_9206.JPG"><img width="100px" src="https://ryanlerch.fedorapeople.org/flockphotos/IMG_9206.JPG-THUMB.JPG"/></a>
+
+        </div>
+      </div>
+    </div>
+    </div>
+
   </body>
 </html>
