Add information for announce-only Telegram channel

--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -91,6 +91,10 @@
             There is a Telegram group for Flock for general Flock discussion and communication.
             You can add it at: <a href="http://bit.ly/flock2016tg">http://bit.ly/flock2016tg</a>
           </p>
+	  <p>
+	    There is another Telegram channel just for Flock
+	    announcements. You can add it at: <a href="http://telegram.me/flock2016announce">http://telegram.me/flock2016announce</a>
+	  </p>
         </div>
       </div>
     </div>
