--- a/labs.fedoraproject.org/data/content/astronomy/download/index.html
+++ b/labs.fedoraproject.org/data/content/astronomy/download/index.html
@@ -18,7 +18,7 @@
         <div class="col-md-7 col-md-offset-5 text-left">
           <h2>${Markup(_('Download Fedora %(rel)s Astronomy')) % {'rel':global_variables.release['curr_id']}}</h2>
             <p class="gr"><a class="btn btn-success astronomy-download-splash" href="${global_variables.path['download_spins']}/${global_variables.release['curr_id']}/Labs/x86_64/iso/Fedora-Astronomy_KDE-Live-x86_64-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.iso" role="button">${_('Download')}</a></p>
-            <h5>${Markup(_('%s MB ISO Image for 64-bit PC')) % global_variables.iso_size['x86_64_Live_Astronomy']}</h5>
+            <h5>${Markup(_('%s GB ISO Image for 64-bit PC')) % global_variables.iso_size['x86_64_Live_Astronomy']}</h5>
         </div>
       </div>
     </div>
