--- a/budget.fedoraproject.org/data/content/index.html
+++ b/budget.fedoraproject.org/data/content/index.html
@@ -125,7 +125,11 @@
             </table>
         </div>
 
-        <p>${_('FCL = Fedora Community Action and Impact Lead (as of Fedora 22+, Remy DeCausemaker).')}</p>
+        <p>${_('FCL = Fedora Community Action and Impact Lead')}</p>
+        <ul>
+          <li>Fedora 22-23: Remy DeCausemaker</li>
+          <li>Fedora 24+: TBD</li>
+        </ul>
 
 
         <p>${_('Note that "→" in the chart above indicates that responsibility for that item feeds into a next step in responsibility; for example, regional treasurers are responsible for providing the FCL with the relevant information for their region, and the FCL is responsible for the general report to the community. Likewise, the Council is responsible for any top-level budget adjustment when the final budget comes in from our sponsor, and regions responsible to update accordingly if needed.')}</p>
@@ -156,7 +160,7 @@
                 <td><a href="#apac">APAC</a></td>
                 <td><a href="mailto:kagesenshi.87@gmail.com">Mohd Izhar Firdaus Ismail (izhar)</a></td>
                 <td><a href="mailto:pj.pandit@yahoo.co.in">PJ Pandit (Pjp)</a></td>
-                <td><a href="mailto:me+fedora@gbraad.nl">Gerard Braad - 吉拉德 (gbraad)</a></td>
+                <td><a href="mailto:mail@kushaldas.in">Kushal Das (kushal)</a></td>
               </tr>
               <tr>
                 <td><a href="#emea">EMEA</a></td>
