fix Jam typo in Yoshimi feature

--- a/labs.fedoraproject.org/data/content/jam/index.html
+++ b/labs.fedoraproject.org/data/content/jam/index.html
@@ -74,7 +74,7 @@
           <div class="border">
           	<img src="${path}/static/images/jam/yoshimi.png" alt="Yoshimi" />
           	<h4>${_('Yoshimi')}</h4>
-          	<p>${_('A powerful synthesizer cable of making a countless number of instrument sounds.')}</p>
+          	<p>${_('A powerful synthesizer capable of making a countless number of instrument sounds.')}</p>
           	<a href="http://yoshimi.sourceforge.net/">${Markup(_('Learn More &gt;'))}</a>
           </div>
         </div>
